--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "google-maps-react": "^2.0.2",
     "konva": "^3.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
